# ai-helper-telegram

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  embed_data.py  pyproject.toml  report_bot.py  run_bot.py  run_migrations.py
app/: main.py  seed.py  train_bot.py
app/api/: mini_app.py
app/core/: config.py  database.py  logging.py
app/models/: knowledge.py  ligtning.py  service.py
app/services/: ai_agent.py  chat_history.py  moderation.py
data/: info.md
docs/: plan.md
mini_app/: callback.html  models.html  parts.html  slots.html  style.css
