[project]
name = "ai-helper-telegram"
version = "0.1.0"
description = ""
authors = [
    {name = "Ostap Shp",email = "stark171705@gmail.com"}
]
readme = "README.md"
requires-python = ">3.13,<3.14"
dependencies = [
    "fastapi (>=0.131.0,<0.132.0)",
    "unicorn (>=2.1.4,<3.0.0)",
    "pydantic-ai-slim[openai] (>=1.62.0,<2.0.0)",
    "motor (>=3.7.1,<4.0.0)",
    "beanie (>=2.0.1,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
