[project]
name = "ai-helper-telegram"
version = "0.1.0"
description = ""
authors = [
    {name = "Ostap Shp",email = "stark171705@gmail.com"}
]
readme = "README.md"
requires-python = ">3.13,<3.14"
dependencies = [
    "fastapi (>=0.131.0,<0.132.0)",
    "pydantic-ai-slim[google] (>=1.63.0,<2.0.0)",
    "motor (>=3.7.1,<4.0.0)",
    "beanie (>=2.0.1,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "pymongo[srv] (>=4.16.0,<5.0.0)",
    "aiogram (>=3.25.0,<4.0.0)",
    "google-genai (>=1.65.0,<2.0.0)",
    "ruff (>=0.15.4,<0.16.0)",
    "agentops (>=0.4.21,<0.5.0)",
    "litellm[proxy] (>=1.81.0,<2.0.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "aiofiles (>=24.0.0,<25.0.0)",
    "slowapi (>=0.1.9,<0.2.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
